Version 1.0.5-gnome3

 * Compatibility fixes for gnome 3 branch.

Version 1.0.4-gnome3

 * Created branch compatible with Gnome3. 

Version 1.0.4
  
 * Integrated patch from callum.macdonald to insert two lines after bracket
   followed by a return

Version 1.0.3

 * Added default pair chars for LaTeX documents

Version 1.0.2

 * Support for different pair chars for different languages

Version 1.0.1

 * Improved README file
 * Added googlecode project URL to plugin metadata

Version 1.0

 * Initial revision
 